--- a/templates/chat/add_member.html
+++ b/templates/chat/add_member.html
@@ -11,7 +11,7 @@
   {% endif %}
 
     <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
-      <h5 class="mb-0"><i class="fa fa-user-plus me-2"></i>Add Members to {{ room.name|title }}</h5>
+      <h5 class="mb-0"><i class="fa fa-user-plus me-2"></i>Add Members to the group {{ room.name|title }}</h5>
       <a href="{% url 'group_info' room.id %}" class="btn btn-light btn-sm">Back</a>
     </div>
 
